# pve2netbox

./: .env.example  .gitignore  Changelog.md  README.md  pyproject.toml  setup.cfg  setup.py
contrib/docker/: Dockerfile  README.dockerhub.md  README.md  docker-compose.combined-mode.yml  docker-compose.simple-mode.yml  docker-compose.single-run.yml
contrib/lxc/: README.md  deploy-from-pve.sh  env.combined-mode  env.simple-mode  env.single-run  install.sh
contrib/systemd/: README.md  env.combined-mode  env.simple-mode  env.single-run  pve2netbox-oneshot.service  pve2netbox.service  pve2netbox.timer
grafana/: pve2netbox-dashboard.json
pve2netbox/: __init__.py  __main__.py  config.py  logger.py  metrics.py  utils.py
pve2netbox/api/: __init__.py  netbox.py  proxmox.py
