[build-system]
requires = [
    "setuptools>=61.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "pve2netbox"
version = "1.0.0"
authors = [
    { name = "Andrew Burdey", email = "a.burdey08@gmail.com" },
]
maintainers = [
    { name = "Alois Micard", email = "alois@micard.lu" },
]
description = "Synchronize Proxmox Virtual Environment (PVE) information to a NetBox instance"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "pynetbox>=7.4",
    "proxmoxer>=2.2",
    "requests>=2.32",
]

[project.urls]
Homepage = "https://github.com/aburdey08/pve2netbox"
Issues = "https://github.com/aburdey08/pve2netbox/issues"
Changelog = "https://github.com/aburdey08/pve2netbox/blob/master/Changelog.md"
Original = "https://git.creekorful.cloud/creekorful/netbox-pve-sync"

[project.scripts]
pve2netbox = "pve2netbox:master"

[project.license]
file = "LICENSE.txt"

[tool.setuptools.packages.find]
include = ["pve2netbox*"]