[metadata]
name = pve2netbox
version = 1.0.3
description = Synchronize Proxmox Virtual Environment (PVE) information to a NetBox instance

[options]
packages = find:
install_requires =
    pynetbox>=7.4
    proxmoxer>=2.2
    requests>=2.32
python_requires = >=3.8

[options.entry_points]
console_scripts =
    pve2netbox = pve2netbox:main

[bdist_wheel]
universal = 0
